--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="projects">
         <div class="row">
           <div class="card">
-            <h2> <a href="project.html">Weather App</a></h2>
+            <h2> <a href="/WeatherApp/project.html">Weather App</a></h2>
           </div>
           <div class="card">
             
